Added link to MAL, fixed privacy text

--- a/src/Views/index-about.phtml
+++ b/src/Views/index-about.phtml
@@ -1,7 +1,7 @@
 <div class="section">
 	<h2>About</h2>
 	<div class="section-body">
-		<p>MALgraph is an extension of your MyAnimeList profile, serving you various information about your data&nbsp;&ndash;&nbsp;rating distribution, favorite studios, personalized recommendations, and a lot more.</p>
+		<p>MALgraph is an extension of your <a target="_blank" href="http://myanimelist.net/">MyAnimeList</a> profile, serving you various information about your data&nbsp;&ndash;&nbsp;rating distribution, favorite studios, personalized recommendations, and a lot more.</p>
 	</div>
 </div>
 
