--- a/src/Views/index-privacy.phtml
+++ b/src/Views/index-privacy.phtml
@@ -23,7 +23,7 @@
 	<div class="section-body">
 		<p>By European Union&rsquo;s definition, cookies are extremely dangerous shards of pure evil scattered around the Internet, and pages hosted within EU have to put a warning regarding user&rsquo;s safety.</p>
 
-		<p>These crunchy things are used to let you filter out titles in Missing titles module, by Analytics to give us feedback about the usage, and by AdSense that shows you advertisement banners that you probably blocked and caused us to starve.</p>
+		<p>These crunchy things are used by Analytics to give us feedback about the usage, and by AdSense to show you advertisement banners that you probably blocked and caused us to starve.</p>
 
 		<p>If you want, you can block accepting cookies in your browser&rsquo;s settings, limiting the browsing experience at the same time. But hey, safety first!</p>
 	</div>
