--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -39,18 +39,20 @@
 
 <body>
 	<div id="header">
+		<div id="no-script">
+			JavaScript is disabled. Consider enabling it to get positive user experience.
+		</div>
+		<script type="text/javascript">
+			$('#no-script').hide()
+		</script>
+
 		<div class="main-wrapper">
 			<div id="logo">
 				<a href="<?php echo IndexControllerIndexModule::url() ?>">
 					<span>MALgraph</span>
 				</a>
+				<div class="sep"></div>
 			</div>
-			<div id="no-script">
-				JavaScript is disabled. Consider enabling it to get positive user experience.
-			</div>
-			<script type="text/javascript">
-				$('#no-script').hide()
-			</script>
 			<form class="waitable search" action="<?php echo IndexControllerSearchModule::url() ?>" method="post">
 				<?php if (isset($viewContext->module)): ?>
 					<input type="hidden" name="module" value="<?php echo $viewContext->module ?>">
@@ -63,11 +65,13 @@
 					<button data-tooltip="Search" name="submit" value="search" type="submit" class="btn"><i class="icon-search"></i></button>
 				</div>
 			</form>
-			<ul id="top-nav">
-				<li><a class="waitable" href="<?php echo IndexControllerAboutModule::url() ?>">About</a></li>
-				<li><a class="waitable" href="<?php echo IndexControllerPrivacyModule::url() ?>">Privacy</a></li>
-				<li><a class="waitable" href="<?php echo IndexControllerGlobalsModule::url() ?>">Globals</a></li>
-			</ul>
+			<div id="top-nav">
+				<a class="waitable" href="<?php echo IndexControllerAboutModule::url() ?>">About</a>
+				<div class="sep"></div>
+				<a class="waitable" href="<?php echo IndexControllerPrivacyModule::url() ?>">Privacy</a>
+				<div class="sep"></div>
+				<a class="waitable" href="<?php echo IndexControllerGlobalsModule::url() ?>">Globals</a>
+			</div>
 			<div class="clear"></div>
 		</div>
 	</div>
