--- a/src/Views/index-index.phtml
+++ b/src/Views/index-index.phtml
@@ -31,22 +31,22 @@
 	<div class="tab-wrapper">
 		<div class="tab">
 			<img src="<?php echo UrlHelper::absoluteUrl('/media/img/logo-huge.png') ?>" alt="MALgraph">
-			<p>MALgraph is an extension of your MyAnimeList profile,<br>serving you various stats about your anime and manga.</p>
+			<p>MALgraph is an extension of your MyAnimeList profile, serving you various stats about your anime and&nbsp;manga.</p>
 		</div>
 
 		<div class="tab">
 			<img class="screenshot" src="<?php echo UrlHelper::absoluteUrl('/media/img/showcase-2.png') ?>" alt="Recommendations">
-			<p>Get recommendations based on your ratings<br>and check related titles you might have missed.</p>
+			<p>Get recommendations based on your ratings and&nbsp;check related titles you might have missed.</p>
 		</div>
 
 		<div class="tab">
 			<img class="screenshot" src="<?php echo UrlHelper::absoluteUrl('/media/img/showcase-3.png') ?>" alt="Achievements">
-			<p>Doing something big, like watching 100 mecha anime,<br>will earn you a badge. All your friends will envy you!</p>
+			<p>Doing something big, like watching 100 mecha anime, will earn you a badge. All your friends will envy you!</p>
 		</div>
 
 		<div class="tab">
 			<img class="screenshot" src="<?php echo UrlHelper::absoluteUrl('/media/img/showcase-4.png') ?>" alt="Global statistics">
-			<p>See how your mean score compares to other users&rsquo;,<br>check how many more manga is there for you to read.</p>
+			<p>See how your mean score compares to other users&rsquo;, check how many more manga is there for you to read.</p>
 		</div>
 	</div>
 
