--- a/src/Views/user-list.phtml
+++ b/src/Views/user-list.phtml
@@ -23,7 +23,7 @@
 					<option value="<?php echo UserListStatus::Dropped ?>">Dropped</option>
 					<option value="<?php echo UserListStatus::Planned ?>">Plan to <?php echo $viewContext->media == Media::Anime ? 'watch' : 'read' ?></option>
 				</select>
-				<input class="btn" type="reset" name="filter-clear" id="filter-clear">
+				<button class="btn" type="reset" name="filter-clear" id="filter-clear">Reset</button>
 				<div class="clear"></div>
 			</form>
 
