--- a/public_html/media/css/header.css
+++ b/public_html/media/css/header.css
@@ -5,14 +5,18 @@
 	font-size: 115%;
 	background: #f5f5f5 url('../img/heading.png') repeat-x bottom;
 }
-#header form,
-#header form input,
-#header .input-append {
+#header form {
 	margin: 0;
 }
 #header #top-nav {
 	float: right;
+	vertical-align: middle;
 }
+#header .input-append {
+	vertical-align: middle;
+	float: left;
+}
+
 #logo {
 	float: left;
 }
@@ -30,19 +34,17 @@
 	display: none;
 }
 
-#header .search {
-	float: left;
+#header input {
 	vertical-align: middle;
 	line-height: 30px;
-}
-#header .search i {
+	margin-left: 0.75em;
+	display: block;
 	float: left;
+	width: 12em;
 }
-#header form {
-	width: 30%;
-}
-#header form input {
-	width: 100%;
+#header .btn {
+	float: left;
+	margin-right: 1em;
 }
 
 #header .sep {
