--- a/public_html/media/css/user/profile.css
+++ b/public_html/media/css/user/profile.css
@@ -33,8 +33,11 @@
 	width: 50%;
 }
 
-.user-pic a {
+.user-pic {
+	width: 40%;
 	float: right;
+}
+.user-pic a {
 	font-size: 0;
 	line-height: 0;
 	margin: 0;
@@ -49,7 +52,7 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top center;
-	height: 200px;
+	width: 100%;
 }
 .user-pic img.unavailable {
 	background-image: url('../img/anon.png');
