--- a/src/Views/user-menu.phtml
+++ b/src/Views/user-menu.phtml
@@ -7,8 +7,8 @@
 				<li>
 			<?php endif ?>
 				<a class="waitable" href="<?php echo UserControllerProfileModule::url($viewContext->user->name) ?>">
-					<?php echo UserControllerProfileModule::getText($viewContext, null) ?>
-					<i class="icon-menu-profile"></i>
+					<span><?php echo UserControllerProfileModule::getText($viewContext, null) ?></span>
+					<i title="<?php echo UserControllerProfileModule::getText($viewContext, null) ?>" class="icon-menu-profile"></i>
 				</a>
 			</li>
 		</ul>
@@ -26,8 +26,8 @@
 							<li>
 						<?php endif ?>
 							<a class="waitable" href="<?php echo $module::url($viewContext->user->name, $media) ?>">
-								<?php echo $module::getText($viewContext, $media) ?>
-								<i class="icon-menu-<?php $x = explode(' ', strtolower($module::getText($viewContext, $media))); echo end($x) ?>"></i>
+								<span><?php echo $module::getText($viewContext, $media) ?></span>
+								<i title="<?php echo $module::getText($viewContext, $media) ?>" class="icon-menu-<?php $x = explode(' ', strtolower($module::getText($viewContext, $media))); echo end($x) ?>"></i>
 							</a>
 						</li>
 					<?php endif ?>
