Better type distribution outlook

--- a/public_html/media/css/user/favorites.css
+++ b/public_html/media/css/user/favorites.css
@@ -5,8 +5,12 @@
 	height: 300px;
 	width: 100%;
 }
+
+.types .target-wrapper {
+	width: 100%;
+}
 .types .target {
-	height: 256px;
+	height: 220px;
 }
 
 table {
