--- a/src/Views/index-index.phtml
+++ b/src/Views/index-index.phtml
@@ -66,6 +66,9 @@
 <footer>
 	<ul>
 		<li>
+			<a class="waitable" href="https://github.com/rr-/malgraph4/releases">Vesion <?php echo Config::$version ?></a>
+		</li>
+		<li>
 			<a class="waitable" href="<?php echo IndexControllerAboutModule::url() ?>">About MALgraph</a>
 		</li>
 		<li>
@@ -73,6 +76,7 @@
 		</li>
 		<li>
 			<a class="waitable" href="<?php echo IndexControllerGlobalsModule::url() ?>">Global stats</a>
+		</li>
 		</li>
 	</ul>
 </footer>
