--- a/public_html/media/css/glider.css
+++ b/public_html/media/css/glider.css
@@ -25,6 +25,10 @@
 }
 #glider p {
 	margin-bottom: 0;
+	display: block;
+}
+#glider:after {
+	content: ''; /* fix for rendering resized box on IE */
 }
 #preloader {
 	background: url('../img/glider.png');
