--- a/public_html/media/css/icons.css
+++ b/public_html/media/css/icons.css
@@ -24,6 +24,6 @@
 .icon-menu-ratings      { background-position: -144px 0; width: 20px; height: 20px; }
 .icon-menu-history      { background-position: -165px 0; width: 20px; height: 20px; }
 .icon-menu-favorites    { background-position: -102px -21px; width: 20px; height: 20px; }
-.icon-menu-suggestions  { background-position: -123px -21px; width: 20px; height: 20px; }
+.icon-menu-recommended  { background-position: -123px -21px; width: 20px; height: 20px; }
 .icon-menu-achievements { background-position: -144px -21px; width: 20px; height: 20px; }
 .icon-close { background-position: -186px 0; width: 24px; height: 24px; margin: 0; }
