--- a/src/Views/user-recommendations-missing.phtml
+++ b/src/Views/user-recommendations-missing.phtml
@@ -2,7 +2,7 @@
 	<h2>
 		Missing titles
 	</h2>
-	<p class="undelete-msg">There are <strong>0</strong> hidden suggestions. <a href="#" class="undelete-trigger">Show them</a></p>
+	<p class="undelete-msg">There are <strong>0</strong> hidden recommendations. <a href="#" class="undelete-trigger">Show them</a></p>
 	<div class="section-body">
 		<?php if ($viewContext->private): ?>
 			<p>Same as above&hellip;</p>
@@ -42,7 +42,7 @@
 									<?php foreach ($franchise->allEntries as $entry): ?>
 										<li id="<?php printf('mis-%s-%s%d', strtolower($viewContext->user->name), $entry->media, $entry->mal_id) ?>">
 											<a href="#" class="delete-trigger">
-												<i data-tooltip="Hide this suggestion" class="right icon-small-close"></i>
+												<i data-tooltip="Hide this recommendation" class="right icon-small-close"></i>
 											</a>
 											<a target="_blank" href="<?php echo $entry->mal_link ?>" title="<?php echo htmlspecialchars($entry->title) ?>">
 												<?php if ($entry->publishing_status == MediaStatus::NotYetPublished): ?>
