--- a/src/Views/user-history-daily.phtml
+++ b/src/Views/user-history-daily.phtml
@@ -1,6 +1,6 @@
 <div class="section history-daily">
 	<h2>
-		Daily activity
+		Recent history
 	</h2>
 	<div class="section-body">
 		<ul class="infobox">
