--- a/src/Views/user-history-monthly.phtml
+++ b/src/Views/user-history-monthly.phtml
@@ -1,6 +1,6 @@
 <div class="section history-monthly">
 	<h2>
-		Monthly activity
+		Completion by month
 	</h2>
 	<div class="section-body">
 		<?php if (empty($viewContext->monthlyHistoryGroups)): ?>
