Added info about 24h for empty type distribution

--- a/src/Views/user-favorites-types.phtml
+++ b/src/Views/user-favorites-types.phtml
@@ -5,6 +5,7 @@
 	<div class="section-body">
 		<?php if ($viewContext->favTypes->getLargestGroupSize() == 0): ?>
 			<p>There is no information about any media type for this user.</p>
+			<p>Add a few titles and come back in 24 hours.<br>We'll be waiting for you.</p>
 		<?php else: ?>
 			<div class="target-wrapper">
 				<div class="target"></div>
