--- a/src/Views/user-ratings-dist.phtml
+++ b/src/Views/user-ratings-dist.phtml
@@ -43,9 +43,9 @@
 
 			<div class="popup-wrapper">
 				<div class="export popup">
-					<div class="title">
+					<div class="header">
 						<a class="close"><i class="icon-close"></i></a>
-						<p>Export your rating distribution</p>
+						<h2>Image export</h2>
 					</div>
 					<div class="body">
 						<div class="custom-theme">
@@ -72,7 +72,7 @@
 						</div>
 						<div class="body-wrapper">
 							<p>You can export your rating distribution as an image, which updates automatically every 24 h. How about putting it on <a target="_blank" href="http://myanimelist.net/editprofile.php">your MAL profile</a>?</p>
-							<div class="header">
+							<div class="combo-wrapper">
 								<p>Layout:</p>
 								<select class="type" name="type"></select>
 								<p>Theme:</p>
