--- a/src/Views/index-index.phtml
+++ b/src/Views/index-index.phtml
@@ -66,7 +66,7 @@
 <footer>
 	<ul>
 		<li>
-			<a class="waitable" href="https://github.com/rr-/malgraph4/releases">Vesion <?php echo Config::$version ?></a>
+			<a class="waitable" href="https://github.com/rr-/malgraph4/releases">Version <?php echo Config::$version ?></a>
 		</li>
 		<li>
 			<a class="waitable" href="<?php echo IndexControllerAboutModule::url() ?>">About MALgraph</a>
