--- a/src/Views/error-user-enqueued.phtml
+++ b/src/Views/error-user-enqueued.phtml
@@ -1,3 +1,8 @@
+<?php if ($viewContext->contentType == 'image/png'): ?>
+<?php readfile(join(DIRECTORY_SEPARATOR, [Config::$mediaDirectory, 'img', 'info-queued.png'])) ?>
+<?php return ?>
+<?php endif ?>
+
 <div class="section">
 	<h2>Okay!</h2>
 	<div class="section-body">
