Added button to reset franchises

--- a/src/Views/admin-index.phtml
+++ b/src/Views/admin-index.phtml
@@ -39,6 +39,7 @@
 		<div class="control-group">
 			<div>
 				<button class="btn btn-success" type="submit" name="action" value="refresh">Refresh</button>
+				<button class="btn btn-success" type="submit" name="action" value="reset-franchise">Reset franchise</button>
 			</div>
 		</div>
 	</fieldset>
