Closed #113; closed #116 (w/o auto-refresh)
Also, button for manual user-wise cache removal in admin

--- a/src/Views/admin-index.phtml
+++ b/src/Views/admin-index.phtml
@@ -61,6 +61,7 @@
 			<div>
 				<button class="btn btn-success" type="submit" name="action" value="refresh">Refresh</button>
 				<button class="btn btn-success" type="submit" name="action" value="toggle-block">Toggle block</button>
+				<button class="btn btn-success" type="submit" name="action" value="wipe-cache">Wipe cache</button>
 			</div>
 		</div>
 	</fieldset>
